--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "It's a presentation framework based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com.",
   "main": "js/impress.js",
+  "scripts": {
+    "start": "webpack --config webpack.config.js",
+    "watch": "webpack --watch"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/impress/impress.js.git"
@@ -21,27 +25,20 @@
   "bugs": {
     "url": "https://github.com/impress/impress.js/issues"
   },
-  "scripts": {
-    "build": "node build.js",
-    "lint": "jshint src test/*.js && jscs src test/*.js",
-    "test": "karma start --single-run",
-    "test:dev": "karma start",
-    "test:sauce": "karma start karma.conf-sauce.js"
-  },
   "devDependencies": {
-    "buildify": "*",
-    "chrome": "0.1.0",
-    "firefox": "0.0.1",
-    "jscs": "2.11.0",
-    "jshint": "2.9.1",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.0",
-    "karma-firefox-launcher": "~0.1",
-    "karma-qunit": "1.0.0",
-    "karma-sauce-launcher": "1.0.0",
-    "ls": "0.2.1",
-    "qunitjs": "2.0.0-rc1",
-    "syn": "0.10.0"
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
+    "html-webpack-plugin": "^3.2.0",
+    "prettier": "^1.9.0",
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0"
+  },
+  "dependencies": {
+    "popmotion": "^8.3.3"
   }
 }
