--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "js/impress.js",
   "scripts": {
     "start": "webpack --config webpack.config.js",
-    "watch": "webpack --watch"
+    "watch": "webpack --watch",
+    "start:dev": "node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -26,7 +27,27 @@
     "url": "https://github.com/impress/impress.js/issues"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-class-properties": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-decorators": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-do-expressions": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-function-bind": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-function-sent": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-json-strings": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-numeric-separator": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-pipeline-operator": "^7.0.0-rc.3",
+    "@babel/plugin-proposal-throw-expressions": "^7.0.0-rc.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0-rc.3",
+    "@babel/plugin-syntax-import-meta": "^7.0.0-rc.3",
+    "@babel/preset-env": "^7.0.0-rc.3",
+    "@babel/preset-stage-0": "^7.0.0-rc.3",
     "babel-eslint": "^8.2.2",
+    "babel-loader": "^8.0.0-beta",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "eslint": "^4.18.2",
@@ -41,7 +62,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0"
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.6"
   },
   "dependencies": {
     "popmotion": "^8.3.3"
