--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "It's a presentation framework based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com.",
   "main": "js/impress.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js",
-    "watch": "webpack --watch",
-    "start:dev": "node_modules/.bin/webpack-dev-server"
+    "build": "webpack --config webpack.config.js",
+    "start": "node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -49,6 +48,7 @@
     "babel-eslint": "^8.2.2",
     "babel-loader": "^8.0.0-beta",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "eslint": "^4.18.2",
     "eslint-config-airbnb": "^16.1.0",
@@ -56,6 +56,7 @@
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
+    "html-webpack-include-assets-plugin": "^1.0.4",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
     "prettier": "^1.9.0",
